--- a/package.json
+++ b/package.json
@@ -41,17 +41,18 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/luxon": "^2.0.8",
     "eslint": "8.15.0",
-    "eslint-config-react-app": "7.0.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "7.0.1",
     "history": "^5.1.0",
     "husky": "^7.0.0",
     "msw": "^0.36.3",
     "prettier": "2.4.1",
+    "source-map-loader": "^4.0.1",
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3004 GENERATE_SOURCEMAP=false react-scripts start --host",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
