--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ FROM image AS build
 ARG env=DEV
 RUN npm install --legacy-peer-deps
 COPY . .
-RUN npm run build --legacy-peer-deps
+RUN npm run build
 
 EXPOSE 3004
 
