--- a/.github/workflows/ci-build-images.yml
+++ b/.github/workflows/ci-build-images.yml
@@ -12,14 +12,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Install Node.js and npm
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14' # Adjust the version as needed
-
-      - name: Install dependencies
-        run: npm install
 
       - name: Docker Setup BuildX
         uses: docker/setup-buildx-action@v2
@@ -39,7 +31,7 @@ jobs:
            echo "DOCKER_TAG_CUSTOM=ghcr.io/${LOWER_CASE_GITHUB_REPOSITORY}:$RELEASE-$VERSION.$BUILD.$FIX" >> $GITHUB_ENV
            echo "$GITHUB_ENV"
       - name: Docker Build
-        run: docker image build -f Dockerfile.dev --tag $DOCKER_TAG_CUSTOM .
+        run: docker image build -f Dockerfile.dev -v /app/node_modules --tag $DOCKER_TAG_CUSTOM .
 
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
