--- a/.github/workflows/ci-build-images.yml
+++ b/.github/workflows/ci-build-images.yml
@@ -13,6 +13,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install Node.js and npm
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14' # Adjust the version as needed
+
+      - name: Install dependencies
+        run: |
+          set -x
+          npm install
+
+      - name: Debugging
+        run: |
+          ls -al
+          ls -al .
+
       - name: Docker Setup BuildX
         uses: docker/setup-buildx-action@v2
 
