--- a/nginx/http-nginx.conf
+++ b/nginx/http-nginx.conf
@@ -1,6 +1,6 @@
 server {
     server_name localhost;
-    listen 443;
+    listen 3004;
 
     server_tokens off;
     add_header Access-Control-Allow-Origin *;
@@ -18,8 +18,8 @@ server {
     }
 }
 
-server {
-    listen 80;
-    server_name localhost;
-    return 301 https://$host$request_uri;
-}
+#server {
+#    listen 80;
+#    server_name localhost;
+#    return 301 https://$host$request_uri;
+#}
