--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "4.1.17",
+    "howler": "^2.2.4",
     "i18next": "^21.2.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "linkify-react": "^3.0.3",
@@ -40,6 +41,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^7.2.1",
+    "@types/howler": "^2.2.11",
     "@types/luxon": "^2.0.8",
     "eslint": "8.15.0",
     "eslint-config-airbnb": "^18.2.1",
